# MathWorker

./: .gitignore  CMakeLists.txt  FunctionConnector.hpp  MathDefines.hpp  MathNode.hpp  MathStringConverter.hpp  MathWorker.sln  MathWorker.vcxproj  MathWorker.vcxproj.filters  ParseException.hpp  ParseUtils.hpp  Parser.hpp  README.md  README_RU.md  Signature.hpp  SignatureGenerator.hpp  SignatureNode.hpp  SymbolNode.hpp  Tokenizer.hpp  ValueNode.hpp  VariableContext.hpp  main.cpp
Examples/: CastomAlgebr.hpp  ConsoleCalculator.hpp
cmake/: MathWorker-config.cmake.in
include/MathWorker/: FunctionConnector.hpp  MathDefines.hpp  MathWorker.hpp  ParseException.hpp  ParseUtils.hpp  Parser.hpp  Signature.hpp  SignatureGenerator.hpp  Tokenizer.hpp
include/MathWorker/MathClasses/: MathNode.hpp  SignatureNode.hpp  SymbolNode.hpp  ValueNode.hpp
include/MathWorker/MathUtils/: MathDefines.hpp  MathJaxStringConverter.hpp  MathStringConverter.hpp
include/MathWorker/Parse/: ParseException.hpp  ParseUtils.hpp  Parser.hpp  Tokenizer.hpp
include/MathWorker/Signature/: FunctionConnector.hpp  Signature.hpp  SignatureGenerator.hpp
include/MathWorker/StringConvert/: ComplexStringConverter.hpp  ConvertStringException.hpp  LaTexStringConverter.hpp  MathStringConverter.hpp
src/: ComplexStringConverter.cpp  ConvertStringException.cpp  FunctionConnector.cpp  LaTexStringConverter.cpp  MathStringConverter.cpp  ParseException.cpp  ParseUtils.cpp  Parser.cpp  Signature.cpp  SignatureGenerator.cpp  SignatureNode.cpp  SymbolNode.cpp  Tokenizer.cpp  ValueNode.cpp
src/MathClasses/: ValueNode.cpp
src/MathWorker/MathClasses/: SignatureNode.cpp  SymbolNode.cpp  ValueNode.cpp
src/MathWorker/Parse/: ParseException.cpp  ParseUtils.cpp  Parser.cpp
